--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Company Inc.</h1>
     <h2>For all your incorporated company needs</h2>
 
-    <iframe></iframe>https://goo.gl/maps/HXqSe7jKd4Mn1VvM9
+    <iframe>https://goo.gl/maps/HXqSe7jKd4Mn1VvM9</iframe>
 
   </body>
 </html>
